Event form styling. Next finish validation transfer, visit

--- a/app/assets/stylesheets/events.sass
+++ b/app/assets/stylesheets/events.sass
@@ -8,21 +8,21 @@
 .modal-body
   padding: 40px
 
+.form-horizontal .form-group
+  margin-left: 0
+  margin-right: 0
+
 #core-event
   .minicolors-input
     padding-left: 0 !important
     color: white
-  .from-horizontal, .form-group
-    margin-left: -10px 
-    margin-right: -10px
   .form-group
     margin-bottom: 4px
   .form-control
     border-radius: 3px
     font-size: 13px
-  .tab-content, .nav-tabs
-    margin-left: -9px
-    margin-right: -9px
+  
+
 
 input.error, textarea.error
   border: solid 1px red
@@ -43,8 +43,19 @@ label.error
   position: relative
   top: -34px
 
+#event_custom_event_attributes_description
+  margin-bottom: 20px
+
 .next-step
   float: right
 
 .closeNewEvent.btn.btn-default
   margin-top: 25px
+
+.minicolors-position-left .minicolors-panel
+  left: -64px
+
+.minicolors-theme-bootstrap .minicolors-swatch
+  width: 95%
+  background: #337ab3
+
