--- a/app/views/events/_training.html.erb
+++ b/app/views/events/_training.html.erb
@@ -1,117 +1,112 @@
-<h3>
-  <p>training</p>
-</h3>
-<div>
-  <!-- Nav tabs -->
-  <ul class="nav nav-tabs" role="tablist">
-    <li role="presentation" class="active disabledTab"><a href="#training-description-tab" aria-controls="training-description-tab" role="tab" data-toggle="tab">Description</a></li>
-    <li role="presentation" class="disabledTab"><a href="#dog-client-tab" aria-controls="dog-client-tab" role="tab" data-toggle="tab">Dog</a></li>
-    <li role="presentation" class="disabledTab"><a href="#trainer-tab" aria-controls="trainer-tab" role="tab" data-toggle="tab">Trainer</a></li>
-    <li role="presentation" class="disabledTab"><a href="#training-note-tab" aria-controls="training-note-tab" role="tab" data-toggle="tab">Note</a></li>
-  </ul>
-  <!-- Tab panes -->
-  <div class="tab-content">
-    <%= event.simple_fields_for :training do |t| %> 
-
-      <div role="tabpanel" class="tab-pane active" id="training-description-tab">
-        <h4>Issue desription</h4>
-        <span class="validate-group-error-placement"></span>
-        <table class="table table-responsive">
-          <thead> </thead>
-          <tbody>
-            <tr>
-              <td> <%= t.input :dog_dog, as: :boolean, input_html: {class: "training-description"} %> </td>
-              <td> <%= t.input :dog_human, as: :boolean, input_html: {class: "training-description"} %> </td>
-              <td> <%= t.input :no_attachment, as: :boolean, input_html: {class: "training-description"} %> </td>
-              <td> <%= t.input :ignore_calling, as: :boolean, input_html: {class: "training-description"} %> </td>
-              <td> <%= t.input :no_heel, as: :boolean, input_html: {class: "training-description"} %> </td>
-              <td> <%= t.input :toilet_home, as: :boolean, input_html: {class: "training-description"} %> </td>
-              <td> <%= t.input :bite_furniture, as: :boolean, input_html: {class: "training-description"} %> </td>
-              <td>
-                <div class="checkbox" id="training-other">
-                  <label class="boolean optional" for="training-other-checkbox">
-                    <input type="checkbox" id="training-other-checkbox" class="training-description" name="training_attributes_other"> Other</label>
-                </div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-        <%= t.input :other %> 
-
-        <button type="button" class="btn btn-default next-step">Save and continue</button>
+<div class="row">
+  <div class="col-md-12">
+    <div class="form-group">
+      <!-- Nav tabs -->
+      <ul class="nav nav-tabs" role="tablist">
+        <li role="presentation" class="active disabledTab"><a href="#training-description-tab" aria-controls="training-description-tab" role="tab" data-toggle="tab">Description</a></li>
+        <li role="presentation" class="disabledTab"><a href="#dog-client-tab" aria-controls="dog-client-tab" role="tab" data-toggle="tab">Dog</a></li>
+        <li role="presentation" class="disabledTab"><a href="#trainer-tab" aria-controls="trainer-tab" role="tab" data-toggle="tab">Trainer</a></li>
+        <li role="presentation" class="disabledTab"><a href="#training-note-tab" aria-controls="training-note-tab" role="tab" data-toggle="tab">Note</a></li>
+      </ul>
+      <!-- Tab panes -->
+      <div class="tab-content">
+        <%= event.simple_fields_for :training do |t| %> 
+          <div role="tabpanel" class="tab-pane active" id="training-description-tab">
+            <h4>Issue desription</h4>
+            <span class="validate-group-error-placement"></span>
+            <table class="table table-responsive">
+              <thead> </thead>
+              <tbody>
+                <tr>
+                  <td> <%= t.input :dog_dog, as: :boolean, input_html: {class: "training-description"} %> </td>
+                  <td> <%= t.input :dog_human, as: :boolean, input_html: {class: "training-description"} %> </td>
+                  <td> <%= t.input :no_attachment, as: :boolean, input_html: {class: "training-description"} %> </td>
+                  <td> <%= t.input :ignore_calling, as: :boolean, input_html: {class: "training-description"} %> </td>
+                  <td> <%= t.input :no_heel, as: :boolean, input_html: {class: "training-description"} %> </td>
+                  <td> <%= t.input :toilet_home, as: :boolean, input_html: {class: "training-description"} %> </td>
+                  <td> <%= t.input :bite_furniture, as: :boolean, input_html: {class: "training-description"} %> </td>
+                  <td>
+                    <div class="checkbox" id="training-other">
+                      <label class="boolean optional" for="training-other-checkbox">
+                        <input type="checkbox" id="training-other-checkbox" class="training-description" name="training_attributes_other"> Other</label>
+                    </div>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            <%= t.input :other %> 
+            <button type="button" class="btn btn-default next-step">Save and continue</button>
+          </div>
+          <div role="tabpanel" class="tab-pane" id="dog-client-tab">
+            <h4>Add Dogs</h4>
+            <span class="validate-group-error-placement"></span>
+            <table class="table table-striped table-responsive table-hover">
+              <thead>
+                <tr>
+                  <th>Add:</th>
+                  <th>Name:</th>
+                  <th>Chip id:</th>
+                  <th>Age:</th>
+                  <th>Breed:</th>
+                  <th>Sex:</th>
+                </tr>
+              </thead>
+              <tbody>
+                <%= hidden_field_tag "traniee_id", nil %> 
+                <% @dogs.each do |dog| %>
+                  <tr>
+                    <td> <%= radio_button_tag "trainee_id", dog.id, @event.training.dog_id == dog.id %> </td>
+                    <td> <%= dog.name %> </td>
+                    <td> <%= dog.chip_id %> </td>
+                    <td> <%= dog.age %> </td>
+                    <td> <%= dog.breed %> </td>
+                    <td> <%= dog.sex %> </td>
+                  </tr>
+                <% end %>
+              </tbody>
+            </table>
+            <button type="button" class="btn btn-default prev-step">Prevoious</button>
+            <button type="button" class="btn btn-default next-step">Save and continue</button>
+          </div>
+          <div role="tabpanel" class="tab-pane" id="trainer-tab">
+            <h4>Listing Trainers</h4>
+            <span class="validate-group-error-placement"></span>
+            <table class="table table-striped table-responsive table-hover">
+              <thead>
+                <tr>
+                  <th>Add</th>
+                  <th>Full name</th>
+                  <th>Email</th>
+                  <th>Phone1</th>
+                  <th>Phone2</th>
+                  <th>Address</th>
+                </tr>
+              </thead>
+              <tbody>
+                <%= hidden_field_tag "trainer_id", nil %> 
+                <% @volunteers.each do |volunteer| %>
+                  <tr>
+                    <td> <%= radio_button_tag "trainer_id", volunteer.id, @event.training.volunteer_id == volunteer.id %> </td>
+                    <td><%= volunteer.fullname %></td>
+                    <td><%= volunteer.email %></td>
+                    <td><%= volunteer.phone1 %></td>
+                    <td><%= volunteer.phone2 %></td>
+                    <td><%= volunteer.location.full_street_address %></td>
+                  </tr>
+                <% end %>
+              </tbody>
+            </table>
+            <button type="button" class="btn btn-default prev-step">Prevoious</button>
+            <button type="button" class="btn btn-default next-step">Save and continue</button>
+          </div>
+          <div role="tabpanel" class="tab-pane" id="training-note-tab">
+            <h4> Add Note </h4>
+            <%= render "note", f: t %>
+            <button type="button" class="btn btn-default prev-step">Prevoious</button>
+          </div>
+        <% end %>
       </div>
-
-      <div role="tabpanel" class="tab-pane" id="dog-client-tab">
-        <h4>Add Dogs</h4>
-        <span class="validate-group-error-placement"></span>
-        <table class="table table-striped table-responsive table-hover">
-          <thead>
-            <tr>
-              <th>Add:</th>
-              <th>Name:</th>
-              <th>Chip id:</th>
-              <th>Age:</th>
-              <th>Breed:</th>
-              <th>Sex:</th>
-            </tr>
-          </thead>
-          <tbody>
-            <%= hidden_field_tag "traniee_id", nil %> 
-            <% @dogs.each do |dog| %>
-              <tr>
-                <td> <%= radio_button_tag "trainee_id", dog.id, @event.training.dog_id == dog.id %> </td>
-                <td> <%= dog.name %> </td>
-                <td> <%= dog.chip_id %> </td>
-                <td> <%= dog.age %> </td>
-                <td> <%= dog.breed %> </td>
-                <td> <%= dog.sex %> </td>
-              </tr>
-            <% end %>
-          </tbody>
-        </table>
-        <button type="button" class="btn btn-default prev-step">Prevoious</button>
-        <button type="button" class="btn btn-default next-step">Save and continue</button>
-      </div>
-
-      <div role="tabpanel" class="tab-pane" id="trainer-tab">
-        <h4>Listing Trainers</h4>
-        <span class="validate-group-error-placement"></span>
-        <table class="table table-striped table-responsive table-hover">
-          <thead>
-            <tr>
-              <th>Add</th>
-              <th>Full name</th>
-              <th>Email</th>
-              <th>Phone1</th>
-              <th>Phone2</th>
-              <th>Address</th>
-            </tr>
-          </thead>
-          <tbody>
-            <%= hidden_field_tag "trainer_id", nil %> 
-            <% @volunteers.each do |volunteer| %>
-              <tr>
-                <td> <%= radio_button_tag "trainer_id", volunteer.id, @event.training.volunteer_id == volunteer.id %> </td>
-                <td><%= volunteer.fullname %></td>
-                <td><%= volunteer.email %></td>
-                <td><%= volunteer.phone1 %></td>
-                <td><%= volunteer.phone2 %></td>
-                <td><%= volunteer.location.full_street_address %></td>
-              </tr>
-            <% end %>
-          </tbody>
-        </table>
-        <button type="button" class="btn btn-default prev-step">Prevoious</button>
-        <button type="button" class="btn btn-default next-step">Save and continue</button>
-      </div>
-
-      <div role="tabpanel" class="tab-pane" id="training-note-tab">
-        <h4> Add Note </h4>
-        <%= render "note", f: t %>
-        <button type="button" class="btn btn-default prev-step">Prevoious</button>
-      </div>
-
-    <% end %>
+    </div>
   </div>
 </div>
 
@@ -120,5 +115,4 @@ if( <%= @event.training.other.present? %> ) {
   $("#training-other-checkbox").prop('checked', true);
   $('.event_training_other').css('display', 'inline');
 }
-
 </script>
