--- a/app/views/events/_visit.html.erb
+++ b/app/views/events/_visit.html.erb
@@ -1,82 +1,81 @@
-<h3>
-  <p>visit</p>
-</h3>
-<div>
-  <!-- Nav tabs -->
-  <ul class="nav nav-tabs" role="tablist">
-    <li role="presentation" class="active disabledTab"><a href="#visit-volunteer-tab" aria-controls="visit-volunteer-tab" role="tab" data-toggle="tab">Volunteer</a></li>
-    <li role="presentation" class="disabledTab"><a href="#visit-client-tab" aria-controls="visit-client-tab" role="tab" data-toggle="tab">Client</a></li>
-    <li role="presentation" class="disabledTab"><a href="#visit-note-tab" aria-controls="visit-note-tab" role="tab" data-toggle="tab">Notes</a></li>
-  </ul>
-  <!-- Tab panes -->
-  <div class="tab-content">
-    <%= event.simple_fields_for :visit do |visit|  %>
-      <div role="tabpanel" class="tab-pane active" id="visit-volunteer-tab">
-        <h3>Listing Volunteers</h3>
-
-        <table class="table table-striped table-responsive table-hover">
-          <thead>
-            <tr>
-              <th>Add</th>
-              <th>Full name</th>
-              <th>Email</th>
-              <th>Phone1</th>
-              <th>Phone2</th>
-              <th>Address</th>
-            </tr>
-          </thead>
-          <tbody>
-            <%= hidden_field_tag "volunteer_id", nil %> 
-            <% @volunteers.each do |volunteer| %>
-              <tr>
-                <td> <%= radio_button_tag "volunteer_id", volunteer.id, @event.visit.volunteer_id == volunteer.id %> </td>
-                <td><%= volunteer.fullname %></td>
-                <td><%= volunteer.email %></td>
-                <td><%= volunteer.phone1 %></td>
-                <td><%= volunteer.phone2 %></td>
-                <td><%= volunteer.location.full_street_address %></td>
-              </tr>
-            <% end %>
-          </tbody>
-        </table>
-      <button type="button" class="btn btn-default next-step">Save and continue</button>
+<div class="row">
+  <div class="col-md-12">
+    <div class="form-group">
+      <!-- Nav tabs -->
+      <ul class="nav nav-tabs" role="tablist">
+        <li role="presentation" class="active disabledTab"><a href="#visit-volunteer-tab" aria-controls="visit-volunteer-tab" role="tab" data-toggle="tab">Volunteer</a></li>
+        <li role="presentation" class="disabledTab"><a href="#visit-client-tab" aria-controls="visit-client-tab" role="tab" data-toggle="tab">Client</a></li>
+        <li role="presentation" class="disabledTab"><a href="#visit-note-tab" aria-controls="visit-note-tab" role="tab" data-toggle="tab">Notes</a></li>
+      </ul>
+      <!-- Tab panes -->
+      <div class="tab-content">
+        <%= event.simple_fields_for :visit do |visit|  %>
+          <div role="tabpanel" class="tab-pane active" id="visit-volunteer-tab">
+            <h4>Listing Volunteers</h4>
+            <table class="table table-striped table-responsive table-hover">
+              <thead>
+                <tr>
+                  <th>Add</th>
+                  <th>Full name</th>
+                  <th>Email</th>
+                  <th>Phone1</th>
+                  <th>Phone2</th>
+                  <th>Address</th>
+                </tr>
+              </thead>
+              <tbody>
+                <%= hidden_field_tag "volunteer_id", nil %> 
+                <% @volunteers.each do |volunteer| %>
+                  <tr>
+                    <td> <%= radio_button_tag "volunteer_id", volunteer.id, @event.visit.volunteer_id == volunteer.id %> </td>
+                    <td><%= volunteer.fullname %></td>
+                    <td><%= volunteer.email %></td>
+                    <td><%= volunteer.phone1 %></td>
+                    <td><%= volunteer.phone2 %></td>
+                    <td><%= volunteer.location.full_street_address %></td>
+                  </tr>
+                <% end %>
+              </tbody>
+            </table>
+            <button type="button" class="btn btn-default next-step">Save and continue</button>
+          </div>
+          <div role="tabpanel" class="tab-pane" id="visit-client-tab">
+            <h4>Listing Clinets</h4>
+            <table class="table table-striped table-responsive table-hover">
+              <thead>
+                <tr>
+                  <th>Add</th>
+                  <th>Full name</th>
+                  <th>Email</th>
+                  <th>Phone1</th>
+                  <th>Phone2</th>
+                  <th>Institution</th>
+                </tr>
+              </thead>
+              <tbody>
+                <%= hidden_field_tag "client_id", nil %> 
+                <% @clients.each do |client| %>
+                  <tr>
+                    <td> <%= radio_button_tag "client_id", client.id, @event.visit.client_id == client.id %> </td>
+                    <td><%= client.fullname %></td>
+                    <td><%= client.email %></td>
+                    <td><%= client.phone1 %></td>
+                    <td><%= client.phone2 %></td>
+                    <td><%= client.institution %></td>
+                  </tr>
+                <% end %>
+              </tbody>
+            </table>      
+            <button type="button" class="btn btn-default prev-step">Prevoious</button>
+            <button type="button" class="btn btn-default next-step">Save and continue</button>
+          </div>
+          <div role="tabpanel" class="tab-pane" id="visit-note-tab">
+            <h4> Add Note </h4>
+            <%= render "note", f: visit %>
+            <button type="button" class="btn btn-default prev-step">Prevoious</button>
+          </div>
+        <% end %> 
       </div>
-      <div role="tabpanel" class="tab-pane" id="visit-client-tab">
-        <h3>Listing Clinets</h3>
-
-        <table class="table table-striped table-responsive table-hover">
-          <thead>
-            <tr>
-              <th>Add</th>
-              <th>Full name</th>
-              <th>Email</th>
-              <th>Phone1</th>
-              <th>Phone2</th>
-              <th>Institution</th>
-            </tr>
-          </thead>
-          <tbody>
-            <%= hidden_field_tag "client_id", nil %> 
-            <% @clients.each do |client| %>
-              <tr>
-                <td> <%= radio_button_tag "client_id", client.id, @event.visit.client_id == client.id %> </td>
-                <td><%= client.fullname %></td>
-                <td><%= client.email %></td>
-                <td><%= client.phone1 %></td>
-                <td><%= client.phone2 %></td>
-                <td><%= client.institution %></td>
-              </tr>
-            <% end %>
-          </tbody>
-        </table>      
-      <button type="button" class="btn btn-default prev-step">Prevoious</button>
-      <button type="button" class="btn btn-default next-step">Save and continue</button>
-      </div>
-      <div role="tabpanel" class="tab-pane" id="visit-note-tab">
-        <h3> Add Note </h3>
-        <%= render "note", f: visit %>
-      <button type="button" class="btn btn-default prev-step">Prevoious</button>
-      </div>
-    <% end %> 
+    </div>
   </div>
 </div>
