Validation for new event done.Next validation and form style for edit event

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -128,6 +128,21 @@ $("#new_event").validate({
     },
     "trainer_id": {
       required: true
+    },
+    "dog_id": {
+      required: true
+    },
+    "recipient_id": {
+      required: true
+    },
+    "conveyor_id": {
+      required: true
+    },
+    "volunteer_id": {
+      required: true
+    },
+    "client_id": {
+      required: true
     }
   },
   groups: {
