--- a/app/views/events/_visit.html.erb
+++ b/app/views/events/_visit.html.erb
@@ -12,6 +12,7 @@
         <%= event.simple_fields_for :visit do |visit|  %>
           <div role="tabpanel" class="tab-pane active" id="visit-volunteer-tab">
             <h4>Listing Volunteers</h4>
+            <span class="validate-group-error-placement"></span>
             <table class="table table-striped table-responsive table-hover">
               <thead>
                 <tr>
@@ -41,6 +42,7 @@
           </div>
           <div role="tabpanel" class="tab-pane" id="visit-client-tab">
             <h4>Listing Clinets</h4>
+            <span class="validate-group-error-placement"></span>
             <table class="table table-striped table-responsive table-hover">
               <thead>
                 <tr>
