--- a/app/views/events/_transfer.html.erb
+++ b/app/views/events/_transfer.html.erb
@@ -14,6 +14,7 @@
         <%= event.simple_fields_for :transfer do |tr| %> 
           <div role="tabpanel" class="tab-pane active" id="transfer-dog-tab">
             <h4>Add Dog</h4>
+            <span class="validate-group-error-placement"></span>
             <table class="table table-striped table-responsive table-hover">
               <thead>
                 <tr>
@@ -45,6 +46,7 @@
             <table class="table table-striped table-responsive table-hover">
               <%= hidden_field_tag "sender_id" %> 
               <h4>Sender</h4>
+              <span class="validate-group-error-placement"></span>
               <thead>
                 <tr>
                   <th>Added:</th>
@@ -69,6 +71,7 @@
           </div>
           <div role="tabpanel" class="tab-pane" id="transfer-recipient-tab">
             <h4>Listing Recipients</h4>
+            <span class="validate-group-error-placement"></span>
             <table class="table table-striped table-responsive table-hover">
               <thead>
                 <tr>
@@ -99,6 +102,7 @@
           </div>
           <div role="tabpanel" class="tab-pane" id="transfer-volunteer-tab">
             <h4>Listing Volunteers</h4>
+            <span class="validate-group-error-placement"></span>
             <table class="table table-striped table-responsive table-hover">
               <thead>
                 <tr>
