Validation for edit events done, some styles.Next validation rule for dates, sytles for buttons.

--- a/app/assets/stylesheets/events.sass
+++ b/app/assets/stylesheets/events.sass
@@ -5,14 +5,17 @@
 #training-other
   margin-left: -15px
 
-.modal-body
-  padding: 40px
+.modal-content
+  border-radius: 0
+  .modal-body
+    padding: 40px
 
 .form-horizontal .form-group
   margin-left: 0
   margin-right: 0
 
 #core-event
+  margin-bottom: 30px
   .minicolors-input
     padding-left: 0 !important
     color: white
@@ -37,7 +40,7 @@ label.error
 .disabledTab
   pointer-events: none
 
-#event-submit
+.event-submit
   float: right
   display: none
   position: relative
@@ -48,9 +51,6 @@ label.error
 
 .next-step
   float: right
-
-.closeNewEvent.btn.btn-default
-  margin-top: 25px
 
 .minicolors-position-left .minicolors-panel
   left: -64px
