--- a/app/views/events/_edit_form.html.erb
+++ b/app/views/events/_edit_form.html.erb
@@ -1,16 +1,14 @@
 <div class="modal fade" id="editEvent">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="closeEditEvent close">x</button>
+      </div>
       <div class="modal-body">
         <div class="row">
           <div class="col-xs-12">
             <div class="containter">
-              <div class="row">
-                <div class="col-sm-12">
-                  <button type="button" class="closeEditEvent close">x</button>
-                </div>
-              </div>
-              <br />
+
               <div class="row">
                 <div class="col-md-12">
                   <p id="notice"><%= notice %></p>
@@ -18,40 +16,54 @@
                   <div id="date_picker"></div>
                   <%= simple_form_for @event, remote: true, html: {class: 'form-horizontal'} do |f| %>
 
-                    <%= f.input :title, input_html: {class: "form-control" } %> 
-                    <%= f.input :start, as: :string, input_html: {class: "datepicker form-control", id: "startTime"} %> 
-                    <%= f.input :end, as: :string, input_html: {class: "datepicker form-control", id: "endTime"} %> 
-                    <%= f.input :color, as: :minicolors %> 
+                    <fieldset id="core-event">
+                      <div class="row">
+                        <div class="col-xs-10">
+                          <%= f.input :title, input_html: {class: "form-control" } %> 
+                        </div>
+                        <div class="col-xs-2">
+                          <%= f.input :color, as: :minicolors %> 
+                        </div>
+                      </div>
 
-                    <%= hidden_field_tag :options, params[:options] %> 
-                    <% case params[:options] 
-                    when 1 %> <%= render "custom_events", event: f %> 
-                <% when 2 %> <%= render "training", event: f %> 
-                <% when 3 %> <%= render "transfer", event: f %> 
-                <% when 4 %> <%= render "visit", event: f %> 
-                <% end %> 
-                <br />
-                <br />
+                      <div class="row">
+                        <div class="col-md-6">
+                          <%= f.input :start, as: :string, input_html: {class: "datepicker form-control", id: "startTime"} %> 
+                        </div>
+                        <div class="col-md-6">
+                          <%= f.input :end, as: :string, input_html: {class: "datepicker form-control", id: "endTime"} %> 
+                        </div>
+                      </div>
+                    </fieldset>
 
-                <%= f.button :submit %> 
+                    <fieldset>
+                      <%= hidden_field_tag :options, params[:options] %> 
+                      <% case params[:options] 
+                      when 1 %> <%= render "custom_events", event: f %> 
+                  <% when 2 %> <%= render "training", event: f %> 
+                  <% when 3 %> <%= render "transfer", event: f %> 
+                  <% when 4 %> <%= render "visit", event: f %> 
+                  <% end %> 
+                    </fieldset>
+                    <br />
+                    <br />
 
-                <%= link_to 'Delete', event_path, method: :delete, 
-                  class: 'btn btn-danger', 
-                  data: {confirm: 'Are you sure?'}, 
-                  remote: true unless @event.new_record? %> 
+                    <%= f.button :submit, class: "event-submit" %> 
 
-              <% end %> 
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-sm-12">
-                  <button type="button" class="closeEditEvent btn btn-default">close</button>
+                    <%= link_to 'Delete', event_path, method: :delete, 
+                      class: 'btn btn-danger', 
+                      data: {confirm: 'Are you sure?'}, 
+                      remote: true unless @event.new_record? %> 
+
+                  <% end %> 
                 </div>
               </div>
             </div>
-            <br />
           </div>
         </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="closeEditEvent btn btn-default">close</button>
       </div>
     </div>
   </div>
@@ -59,5 +71,128 @@
 <script>
 $('#event_color').minicolors({
   theme: 'bootstrap'
+});
+
+function nextTab(elem) {
+  $(elem).next().find('a[data-toggle="tab"]').click();
+  if(elem.next().is(":last-of-type")) {
+    $(".event-submit").css("display", "initial");
+  } else {
+    $(".event-submit").css("display", "none");
+  }
+}
+function prevTab(elem) {
+  $(elem).prev().find('a[data-toggle="tab"]').click();
+  $(".event-submit").css("display", "none");
+}
+$(".next-step").on('click', function() {
+  if ($(".simple_form").valid()) {
+    x = $(this).parents().prev('.nav-tabs').find('li.active');
+    nextTab(x);
+  }
+});
+$(".prev-step").on('click', function() {
+  x = $(this).parents().prev('.nav-tabs').find('li.active');
+  prevTab(x);
+});
+
+
+
+jQuery.validator.addMethod('optionsCheck', function(value){
+  return (value != '0');
+}, 'event type required');
+
+
+$(".simple_form").validate({
+  debug: true,
+  rules: {
+
+    options: { 
+      optionsCheck: true 
+    },
+    "event[training_attributes][dog_dog]": {
+      require_from_group: [1, ".training-description"]
+    },
+
+    "event[training_attributes][dog_human]": {
+      require_from_group: [1, ".training-description"]
+    },
+
+    "event[training_attributes][no_attachment]": {
+      require_from_group: [1, ".training-description"]
+    },
+
+    "event[training_attributes][ignore_calling]": {
+      require_from_group: [1, ".training-description"]
+    },
+
+    "event[training_attributes][no_heel]": {
+      require_from_group: [1, ".training-description"]
+    },
+
+    "event[training_attributes][toilet_home]": {
+      require_from_group: [1, ".training-description"]
+    },
+
+    "event[training_attributes][bite_furniture]": {
+      require_from_group: [1, ".training-description"]
+    },
+
+    "training_attributes_other": {
+      require_from_group: [1, ".training-description"]
+    },
+    "event[training_attributes][other]": {
+    },
+
+    "trainee_id": {
+      required: true
+    },
+    "trainer_id": {
+      required: true
+    },
+    "dog_id": {
+      required: true
+    },
+    "recipient_id": {
+      required: true
+    },
+    "conveyor_id": {
+      required: true
+    },
+    "volunteer_id": {
+      required: true
+    },
+    "client_id": {
+      required: true
+    }
+  },
+
+  groups: {
+    trainingChecks: "event[training_attributes][dog_dog] event[training_attributes][dog_human] event[training_attributes][no_attachment] event[training_attributes][ignore_calling] event[training_attributes][no_heel] event[training_attributes][toilet_home] event[training_attributes][bite_furniture] training_attributes_other"
+  },
+
+  errorPlacement: function(error, element) {
+    if($(element).attr("type") == "checkbox" || $(element).attr("type") == "radio") {
+      error.appendTo($(element).parents('table').prev());
+    } else {
+      error.insertAfter(element);
+    }
+  },
+
+  highlight: function(element, errorClass) {
+    if($(element).attr("type") == "checkbox" || $(element).attr("type") == "radio") {
+      $(element).parents('table').prev().prev().css("color", "red");
+    } else {
+      $(element).css({"border": "red 1px solid", "box-shadow": "0 0 7px rgba(255, 0, 0, 0.6)"});
+    }
+  },
+  unhighlight: function(element, errorClass, validClass) {
+    if($(element).attr("type") == "checkbox" || $(element).attr("type") == "radio") {
+      $(element).parents('table').prev().prev().css("color", "inherit");
+    } else {
+      $(element).css({"border": "#ccc 1px solid", "box-shadow": "none"});
+    }
+  }
+
 });
 </script>
