--- a/app/views/events/_new.html.erb
+++ b/app/views/events/_new.html.erb
@@ -1,16 +1,13 @@
 <div class="modal fade" id="newEvent">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="closeNewEvent close">x</button>
+      </div>
       <div class="modal-body">
         <div class="row">
           <div class="col-xs-12">
             <div class="containter">
-              <div class="row">
-                <div class="col-sm-12">
-                  <button type="button" class="closeNewEvent close">x</button>
-                </div>
-              </div>
-              <br />
               <div class="row">
                 <div class="col-md-12">
                   <p id="notice"><%= notice %></p>
@@ -20,15 +17,12 @@
                   <div id="result"></div>
                 </div>
               </div>
-              <div class="row">
-                <div class="col-sm-12">
-                  <button type="button" class="closeNewEvent btn btn-default">close</button>
-                </div>
-              </div>
             </div>
-            <br />
           </div>
         </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="closeNewEvent btn btn-default">close</button>
       </div>
     </div>
   </div>
