Bug with assets precompling fixed

--- a/app/assets/stylesheets/events.sass
+++ b/app/assets/stylesheets/events.sass
@@ -56,6 +56,6 @@ label.error
   left: -64px
 
 .minicolors-theme-bootstrap .minicolors-swatch
-  width: 95%
+  width: 95% !important
   background: #337ab3
 
