Minor styles applied to event clendar tabs

--- a/app/assets/stylesheets/events.sass
+++ b/app/assets/stylesheets/events.sass
@@ -14,8 +14,11 @@
   margin-left: 0
   margin-right: 0
 
+li > a
+  color: lighten($typo-dark, 15%)
+
 #core-event
-  margin-bottom: 30px
+  margin-bottom: 10px
   .minicolors-input
     padding-left: 0 !important
     color: white
