--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -81,10 +81,23 @@ jQuery.validator.addMethod('optionsCheck', function(value){
   return (value != '0');
 }, 'event type required');
 
+jQuery.validator.addMethod('dateCheck', function(value) {
+  sd = new Date($("#startTime").val());
+  ed = new Date($("#endTime").val());
+  if(sd <= ed) {
+    return true;
+  } else {
+    return false;
+  }
+}, 'End date should came after start date');
 
 $("#new_event").validate({
   debug: true,
   rules: {
+
+    "event[end]": {
+      dateCheck: true
+    },
 
     options: { optionsCheck: true },
 
