Pagination added to Volunteers

--- a/app/views/volunteers/index.html.erb
+++ b/app/views/volunteers/index.html.erb
@@ -34,7 +34,7 @@
     <% end %>
   </tbody>
 </table>
-
+<%= will_paginate @volunteers %>
 <br>
 
 <%= link_to 'New Volunteer', new_volunteer_path %>
