Pagination added to donations

--- a/app/views/business/donations/index.html.erb
+++ b/app/views/business/donations/index.html.erb
@@ -29,7 +29,7 @@
     <% end %>
   </tbody>
 </table>
-
+<%= will_paginate @business_donations %> 
 <br>
 
 <%= link_to 'New Donation', new_business_donation_path %>
