Pagination added to donators

--- a/app/views/business/donators/index.html.erb
+++ b/app/views/business/donators/index.html.erb
@@ -28,7 +28,7 @@
     <% end %>
   </tbody>
 </table>
-
+<%= will_paginate @donators %> 
 <br>
 
 <%= link_to 'New Donation', new_business_donation_path %>
