On each model search paginate and sort implemented with help of clientside plugin

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -25,6 +25,7 @@
 @import bootstrap-datetimepicker
 @import sessions
 @import clients 
+@import dataTables/jquery.dataTables
 @import events 
 @import jquery.minicolors
 @import asside 
