--- a/app/views/events/_custom_events.html.erb
+++ b/app/views/events/_custom_events.html.erb
@@ -20,7 +20,7 @@
           </div>
           <div role="tabpanel" class="tab-pane" id="custom-event-dog-tab">
             <h4>Add Dogs</h4>
-            <table class="table table-striped table-responsive table-hover">
+            <table id="dogs-custom-table" class="table table-striped table-responsive table-hover">
               <thead>
                 <tr>
                   <th>Add:</th>
@@ -50,7 +50,7 @@
           </div>
           <div role="tabpanel" class="tab-pane" id="custom-event-clients-tab">
             <h4>Add Clients</h4>
-            <table class="table table-striped table-responsive table-hover">
+            <table id="clients-custom-table" class="table table-striped table-responsive table-hover">
               <thead>
                 <tr>
                   <th>Add:</th>
@@ -82,7 +82,7 @@
           </div>
           <div role="tabpanel" class="tab-pane" id="custom-event-voluteer-tab">
             <h4>Add Volunteers</h4>
-            <table class="table table-striped table-responsive table-hover">
+            <table id="volunteers-custom-table" class="table table-striped table-responsive table-hover">
               <thead>
                 <tr>
                   <th>Add</th>
