--- a/app/views/events/_transfer.html.erb
+++ b/app/views/events/_transfer.html.erb
@@ -15,7 +15,7 @@
           <div role="tabpanel" class="tab-pane active" id="transfer-dog-tab">
             <h4>Add Dog</h4>
             <span class="validate-group-error-placement"></span>
-            <table class="table table-striped table-responsive table-hover">
+            <table id="dogs-transfer-table" class="table table-striped table-responsive table-hover">
               <thead>
                 <tr>
                   <th>Add:</th>
@@ -72,7 +72,7 @@
           <div role="tabpanel" class="tab-pane" id="transfer-recipient-tab">
             <h4>Listing Recipients</h4>
             <span class="validate-group-error-placement"></span>
-            <table class="table table-striped table-responsive table-hover">
+            <table id="clients-transfer-table" class="table table-striped table-responsive table-hover">
               <thead>
                 <tr>
                   <th>Add</th>
@@ -103,7 +103,7 @@
           <div role="tabpanel" class="tab-pane" id="transfer-volunteer-tab">
             <h4>Listing Volunteers</h4>
             <span class="validate-group-error-placement"></span>
-            <table class="table table-striped table-responsive table-hover">
+            <table id="volunteers-transfer-table" class="table table-striped table-responsive table-hover">
               <thead>
                 <tr>
                   <th>Add</th>
