--- a/app/views/business/donators/index.html.erb
+++ b/app/views/business/donators/index.html.erb
@@ -2,14 +2,14 @@
 
 <h1>Listing Business Donators</h1>
 
-<table class="table table-striped table-responsive table-hover">
+<table id="donators-table" class="table table-striped table-responsive table-hover">
   <thead>
     <tr>
       <th>Full name </th>
       <th>Email  </th>
       <th>Phone </th>
       <th>Institution </th>
-      <th colspan="3">Actions </th>
+      <th>Actions </th>
     </tr>
   </thead>
 
@@ -28,7 +28,6 @@
     <% end %>
   </tbody>
 </table>
-<%= will_paginate @donators %> 
 <br>
 
 <%= link_to 'New Donation', new_business_donation_path %>
