--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Dog Owners</h1>
-<table class="table table-striped table-responsive table-hover">
+<table id="clients-table" >
   <thead>
     <tr>
       <th>First name</th>
@@ -10,8 +10,8 @@
       <th>Phone1</th>
       <th>Phone2</th>
       <th>Institution</th>
-      <th colspan="2">Coordinates</th>
-      <th colspan="3">Actions</th>
+      <%# <th colspan="2">Coordinates</th> %>
+      <%# <th colspan="3">Actions</th> %>
     </tr>
   </thead>
 
@@ -24,16 +24,15 @@
         <td><%= client.phone1 %></td>
         <td><%= client.phone2 %></td>
         <td><%= client.institution %></td>
-        <td><%= client.location.latitude %></td>
-        <td><%= client.location.longitude %></td>
-        <td><%= link_to 'Show', client, remote: true %></td>
-        <td><%= link_to 'Edit', edit_client_path(client) %></td>
-        <td><%= link_to 'Destroy', client, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <%# <td><%= client.location.latitude %1></td> %>
+        <%# <td><%= client.location.longitude %1></td> %>
+        <%# <td><%= link_to 'Show', client, remote: true %1></td> %>
+        <%# <td><%= link_to 'Edit', edit_client_path(client) %1></td> %>
+        <%# <td><%= link_to 'Destroy', client, method: :delete, data: { confirm: 'Are you sure?' } %1></td> %>
       </tr>
     <% end %>
   </tbody>
 </table>
-<%= will_paginate @clients %> 
 <br>
 
 <%= link_to 'New Client', new_client_path %>
