--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -2,9 +2,7 @@
 
 <h1>Listing Dogs</h1>
 
-<%= render "dog_search" %>
-
-<table class="table table-striped table-responsive table-hover">
+<table id="dogs-table" class="table table-striped table-responsive table-hover">
   <thead>
     <tr>
       <th>Name:</th>
@@ -12,7 +10,7 @@
       <th>Age:</th>
       <th>Breed:</th>
       <th>Sex:</th>
-      <th colspan="3">Actions:</th>
+      <th>Actions:</th>
     </tr>
   </thead>
   <tbody>
@@ -30,7 +28,6 @@
     <% end %>
   </tbody>
 </table>
-<%= will_paginate @dogs %> 
 <br>
 
 <%= link_to 'New Dog', new_client_path %>
