--- a/app/views/events/_training.html.erb
+++ b/app/views/events/_training.html.erb
@@ -40,7 +40,7 @@
           <div role="tabpanel" class="tab-pane" id="dog-client-tab">
             <h4>Add Dogs</h4>
             <span class="validate-group-error-placement"></span>
-            <table class="table table-striped table-responsive table-hover">
+            <table id="dogs-training-table" class="table table-striped table-responsive table-hover">
               <thead>
                 <tr>
                   <th>Add:</th>
@@ -71,7 +71,7 @@
           <div role="tabpanel" class="tab-pane" id="trainer-tab">
             <h4>Listing Trainers</h4>
             <span class="validate-group-error-placement"></span>
-            <table class="table table-striped table-responsive table-hover">
+            <table id="volunteers-training-table" class="table table-striped table-responsive table-hover">
               <thead>
                 <tr>
                   <th>Add</th>
