--- a/app/views/events/_visit.html.erb
+++ b/app/views/events/_visit.html.erb
@@ -13,7 +13,7 @@
           <div role="tabpanel" class="tab-pane active" id="visit-volunteer-tab">
             <h4>Listing Volunteers</h4>
             <span class="validate-group-error-placement"></span>
-            <table class="table table-striped table-responsive table-hover">
+            <table id="volunteers-visit-table" class="table table-striped table-responsive table-hover">
               <thead>
                 <tr>
                   <th>Add</th>
@@ -43,7 +43,7 @@
           <div role="tabpanel" class="tab-pane" id="visit-client-tab">
             <h4>Listing Clinets</h4>
             <span class="validate-group-error-placement"></span>
-            <table class="table table-striped table-responsive table-hover">
+            <table id="clients-visit-table" class="table table-striped table-responsive table-hover">
               <thead>
                 <tr>
                   <th>Add</th>
