--- a/app/views/events/new.js.erb
+++ b/app/views/events/new.js.erb
@@ -7,3 +7,14 @@ $('body').on('hidden.bs.modal', '.modal', function (e) {
   $(e.target).removeData('bs.modal');
   $('.modal').remove();
 });
+$('#dogs-custom-table').DataTable();
+$('#dogs-training-table').DataTable();
+$('#dogs-transfer-table').DataTable();
+$('#clients-custom-table').DataTable();
+$('#clients-transfer-table').DataTable();
+$('#clients-visit-table').DataTable();
+$('#volunteers-custom-table').DataTable();
+$('#volunteers-training-table').DataTable();
+$('#volunteers-transfer-table').DataTable();
+$('#volunteers-visit-table').DataTable();
+
