--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <h3><i class="fa fa-angle-right"></i> users#index</h3>
 <div class="row mt">
   <div class="col-lg-12">
-    <table class="table table-hover">
+    <table id="users-table" class="table table-hover">
       <thead>
         <tr>
           <th>Fullname</th>
@@ -30,8 +30,6 @@
         <% end %> 
       </tbody>
     </table>
-    <%= page_entries_info @users %> <br>
-    <%= will_paginate @users %>  
     <br >
     <%= if current_moderator.owner? then link_to 'New User', new_user_path end %> 
     </div>
