--- a/app/views/volunteers/index.html.erb
+++ b/app/views/volunteers/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Listing Volunteers</h1>
 
-<table class="table table-striped table-responsive table-hover">
+<table id="volunteers-table" class="table table-striped table-responsive table-hover">
   <thead>
     <tr>
       <th>First name</th>
@@ -11,8 +11,8 @@
       <th>Phone1</th>
       <th>Phone2</th>
       <th>Address</th>
-      <th colspan="2">Coordinates</th>
-      <th colspan="3">Actions</th>
+      <%# <th colspan="2">Coordinates</th> %>
+      <%# <th colspan="3">Actions</th> %>
     </tr>
   </thead>
 
@@ -25,16 +25,15 @@
         <td><%= volunteer.phone1 %></td>
         <td><%= volunteer.phone2 %></td>
         <td><%= volunteer.location.full_street_address %></td>
-        <td><%= volunteer.location.latitude %></td>
-        <td><%= volunteer.location.longitude %></td>
-        <td><%= link_to 'Show', volunteer, remote: true %></td>
-        <td><%= link_to 'Edit', edit_volunteer_path(volunteer) %></td>
-        <td><%= link_to 'Destroy', volunteer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <%# <td><%= volunteer.location.latitude %1></td> %>
+        <%# <td><%= volunteer.location.longitude %1></td> %>
+        <%# <td><%= link_to 'Show', volunteer, remote: true %1></td> %>
+        <%# <td><%= link_to 'Edit', edit_volunteer_path(volunteer) %1></td> %>
+        <%# <td><%= link_to 'Destroy', volunteer, method: :delete, data: { confirm: 'Are you sure?' } %1></td> %>
       </tr>
     <% end %>
   </tbody>
 </table>
-<%= will_paginate @volunteers %>
 <br>
 
 <%= link_to 'New Volunteer', new_volunteer_path %>
