--- a/app/views/volunteers_groups/index.html.erb
+++ b/app/views/volunteers_groups/index.html.erb
@@ -2,12 +2,12 @@
 
 <h1>Listing Volunteers Groups</h1>
 
-<table class="table table-striped table-responsive table-hover">
+<table id="volunteers-group-table" class="table table-striped table-responsive table-hover">
   <thead>
     <tr>
       <th>Name</th>
       <th>Description</th>
-      <th colspan="3"></th>
+      <%# <th colspan="3"></th> %>
     </tr>
   </thead>
 
@@ -16,14 +16,13 @@
       <tr>
         <td><%= volunteers_group.name %></td>
         <td><%= volunteers_group.description %></td>
-        <td><%= link_to 'Show', volunteers_group %></td>
-        <td><%= link_to 'Edit', edit_volunteers_group_path(volunteers_group) %></td>
-        <td><%= link_to 'Destroy', volunteers_group, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <%# <td><%= link_to 'Show', volunteers_group %1></td> %>
+        <%# <td><%= link_to 'Edit', edit_volunteers_group_path(volunteers_group) %1></td> %>
+        <%# <td><%= link_to 'Destroy', volunteers_group, method: :delete, data: { confirm: 'Are you sure?' } %1></td> %>
       </tr>
     <% end %>
   </tbody>
 </table>
-<%= will_paginate @volunteers_groups %>
 <br>
 
 <%= link_to 'New Volunteers group', new_volunteers_group_path %>
