Some try to fix js on android

--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -31,3 +31,11 @@
 <br>
 
 <%= link_to 'New Dog', new_client_path %>
+<script>
+$(document).on("turbolinks:load", function(){
+  $("body").on("click", "#showOwnerBtn", function(){
+    $("#owner").toggle();
+  });
+  $("#dogs-table").dataTable();
+});
+</script>
