JScripts that initialize datatables moved into views

--- a/app/views/business/donations/index.html.erb
+++ b/app/views/business/donations/index.html.erb
@@ -30,5 +30,11 @@
   </tbody>
 </table>
 <br>
-
 <%= link_to 'New Donation', new_business_donation_path %>
+
+
+<script>
+  $(document).on("turbolinks:load", function(){
+    $("#donations-table").dataTable();
+  });
+</script>
