--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -34,3 +34,8 @@
     <%= if current_moderator.owner? then link_to 'New User', new_user_path end %> 
     </div>
 </div>
+<script>
+  $(document).on("turbolinks:load", function() {
+    $("#users-table").dataTable();
+  });
+</script>
