--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,8 +8,7 @@
           <th>Email</th>
           <th>Created at</th>
           <th>Address</th>
-          <th colspan="2" >Coordinates</th>
-          <th>Action</th>
+          <th>Actions</th>
         </tr>
       </thead>
       <tbody>
@@ -19,8 +18,6 @@
             <td> <%= user.email %> </td>
             <td> <%= user.created_at %> </td>
             <td> <%= user.location.full_street_address %> </td>
-            <td> <%= user.location.latitude %> </td>
-            <td> <%= user.location.longitude %> </td>
             <td> <%= link_to "Edit", edit_user_path(user) %> 
             <% unless user.owner? %>
               <%=  link_to "Delete", user_path(user), method: 'delete' if current_moderator.owner? %> 
