--- a/app/views/volunteers_groups/index.html.erb
+++ b/app/views/volunteers_groups/index.html.erb
@@ -7,7 +7,7 @@
     <tr>
       <th>Name</th>
       <th>Description</th>
-      <%# <th colspan="3"></th> %>
+      <th>Actions</th>
     </tr>
   </thead>
 
@@ -16,9 +16,9 @@
       <tr>
         <td><%= volunteers_group.name %></td>
         <td><%= volunteers_group.description %></td>
-        <%# <td><%= link_to 'Show', volunteers_group %1></td> %>
-        <%# <td><%= link_to 'Edit', edit_volunteers_group_path(volunteers_group) %1></td> %>
-        <%# <td><%= link_to 'Destroy', volunteers_group, method: :delete, data: { confirm: 'Are you sure?' } %1></td> %>
+        <td><%= link_to 'Show', volunteers_group %>
+        <%= link_to 'Edit', edit_volunteers_group_path(volunteers_group) %>
+        <%= link_to 'Destroy', volunteers_group, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
