Import of csv volunteers with association

--- a/app/views/volunteers/index.html.erb
+++ b/app/views/volunteers/index.html.erb
@@ -31,6 +31,8 @@
 </table>
 <br>
 <%= link_to 'New Volunteer', new_volunteer_path %>
+<br>
+<%= link_to 'Download data in CSV format', volunteers_path(format: "csv") %> 
 
 
 
