Csv data download for all files added

--- a/app/views/business/donations/index.html.erb
+++ b/app/views/business/donations/index.html.erb
@@ -31,5 +31,7 @@
 </table>
 <br>
 <%= link_to 'New Donation', new_business_donation_path %>
+<br>
+<%= link_to 'Download data in CSV format', business_donations_path(format: "csv") %> 
 
 
