--- a/app/views/business/donators/index.html.erb
+++ b/app/views/business/donators/index.html.erb
@@ -29,4 +29,5 @@
 </table>
 <br>
 <%= link_to 'New Donation', new_business_donation_path %>
-
+<br>
+<%= link_to 'Download data in CSV format', business_donators_path(format: "csv") %> 
