--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -32,5 +32,7 @@
 </table>
 <br>
 <%= link_to 'New Client', new_client_path %>
+<br>
+<%= link_to 'Download data in CSV format', clients_path(format: "csv") %> 
 
 
