--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -29,12 +29,7 @@
     </table>
     <br >
     <%= if current_moderator.owner? then link_to 'New User', new_user_path end %> 
-    </div>
+      <br>
+      <%= link_to 'Download data in CSV format', users_path(format: "csv") %> 
+  </div>
 </div>
-<script>
-<%# $(document).on("turbolinks:load", function() { %>
-<%#   if ($(".dataTables_wrapper").length == 0) { %>
-<%#     $("#users-table").DataTable(); %>
-<%#   } %>
-<%# }); %>
-</script>
