Minor update to side menu

--- a/app/views/application_partials/_asside.html.erb
+++ b/app/views/application_partials/_asside.html.erb
@@ -23,7 +23,7 @@
           </div>
           <div id="volunteers_submenu" class="panel-collapse collapse">
             <ul class="sub">
-              <li> <%= link_to "All Volunteers", volunteers_path %> </li>
+              <li> <%= link_to "Volunteers", volunteers_path %> </li>
               <li> <%= link_to "Groups", volunteers_groups_path %> </li>
             </ul>
           </div>
@@ -34,7 +34,7 @@
           </div>
           <div id="dogs_submenu" class="panel-collapse collapse">
             <ul class="sub">
-              <li> <%= link_to "All Dogs", dogs_path %> </li>
+              <li> <%= link_to "Dogs", dogs_path %> </li>
               <li> <%= link_to "Dog Owners", clients_path %> </li>
             </ul>
           </div>
