--- a/app/views/business/donators/index.html.erb
+++ b/app/views/business/donators/index.html.erb
@@ -31,3 +31,5 @@
 <%= link_to 'New Donation', new_business_donation_path %>
 <br>
 <%= link_to 'Download data in CSV format', business_donators_path(format: "csv") %> 
+<br>
+<%= link_to 'Import data in CSV format', new_business_donators_import_path %> 
