--- a/app/assets/stylesheets/events.sass
+++ b/app/assets/stylesheets/events.sass
@@ -1,3 +1,11 @@
+#calendar-panel
+  height: 100%
+  padding: 50px
+  color: initial
+  .white-header
+    margin: -50px -50px 50px -50px
+    color: initial
+    text-align: left
 
 #custom-event, #training, #transfer, #visit, .event_training_other
   display: none
@@ -62,3 +70,12 @@ label.error
   width: 95% !important
   background: #337ab3
 
+.fc-state-default
+  background-image: none
+  box-shadow: none
+.fc-state-default.fc-corner-left
+  border-top-left-radius: 0
+  border-bottom-left-radius: 0
+.fc-state-default.fc-corner-right
+  border-top-right-radius: 0
+  border-bottom-right-radius: 0
