--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,5 +1,10 @@
 <div id="dashboard">
-  <div class="calendar"></div>
+  <div id="calendar-panel" class="white-panel pn">
+    <div class="white-header">
+      <h5>> Create Event</h5>
+    </div>
+    <div class="calendar"></div>
+  </div>
 </div>
 <script>
 var hide = function( ...selectors) {
