--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
     <script>
 $(document).on("turbolinks:load", function() {
   if ($(".dataTables_wrapper").length == 0) {
-    $("table").DataTable();
+    $(".table").DataTable();
   }
 });
     </script>
