--- a/app/assets/stylesheets/_partials.sass
+++ b/app/assets/stylesheets/_partials.sass
@@ -29,7 +29,9 @@ $large: 1199px
   -moz-border-radius: $radius
   -ms-border-radius: $radius
   border-radius: $radius
-
+  
+=panel-shadow
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24)
 
 // basic settings
 html, body, ul, ol
