--- a/app/assets/stylesheets/dashboard.sass
+++ b/app/assets/stylesheets/dashboard.sass
@@ -10,3 +10,16 @@
     i
       font-size: 25px
       line-height: 100%
+
+#dashboard
+  padding: 30px
+
+#center-dashboard
+  .row
+    margin-right: -5px
+
+#right-sidebar-dashboard
+  height: 100%
+
+.mt
+  margin-right: 5px
