--- a/app/assets/stylesheets/style-theme.sass
+++ b/app/assets/stylesheets/style-theme.sass
@@ -343,6 +343,7 @@ ul.sidebar-menu li
   margin-left: 140px
 
 .header, .footer
+  +panel-shadow
   min-height: 60px
   padding: 0 15px
 
@@ -354,15 +355,15 @@ ul.sidebar-menu li
 
 .black-bg
   background: $yell-light
-  border-bottom: 1px solid $yell-dark
 
 .wrapper
   display: inline-block
   margin-top: 60px
-  padding-left: 15px
-  padding-right: 15px
-  padding-bottom: 15px
-  padding-top: 0px
+  padding: 10px 30px
+  // padding-left: 15px
+  // padding-right: 15px
+  // padding-bottom: 15px
+  // padding-top: 0px
   width: 100%
 
 a.logo
@@ -649,6 +650,7 @@ ul.top-menu > li > a
     margin-left: 0px
 
   #sidebar
+    +panel-shadow 
     margin-left: -180px
 
 /* Dash Side
@@ -839,10 +841,7 @@ ul.top-menu > li > a
 
 .pn
   height: 250px
-  box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2)
-
-  &:hover
-    box-shadow: 2px 3px 2px rgba(0, 0, 0, 0.3)
+  +panel-shadow
 
 /*Grey Panel
 
