--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,10 +1,10 @@
 <div class="row mt">
-  <div class="col-lg-9">
+  <div id="center-dashboard" class="col-lg-9">
     <%= render "application_partials/main_section_dashboard" %>
-    </div>
+  </div>
 
 
-  <div class="col-lg-3 ds">
+  <div id="right-sidebar-dashboard" class="col-lg-3 ds pn" >
     <%= render "application_partials/right_sidebar" %>
   </div>
 </div>
