--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,7 +1,7 @@
 <div id="dashboard">
   <div id="calendar-panel" class="white-panel pn">
     <div class="white-header">
-      <h5>> Create Event</h5>
+      <h1> <i class="fa fa-chevron-right" aria-hidden="true"></i> Create Event</h1>
     </div>
     <div class="calendar"></div>
   </div>
