--- a/app/views/volunteers/index.html.erb
+++ b/app/views/volunteers/index.html.erb
@@ -1,40 +1,61 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Volunteers</h1>
+<div class="tables-wrapper">
+  <div class="white-panel pn">
+    <div class="white-header">
+      <h1> <i class="fa fa-chevron-right" aria-hidden="true"></i> Listing Volunteers</h1>
+    </div>
 
-<table id="volunteers-table" class="table table-striped table-responsive table-hover">
-  <thead>
-    <tr>
-      <th>First name</th>
-      <th>Last name</th>
-      <th>Email</th>
-      <th>Phone1</th>
-      <th>Address</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
+    <table id="volunteers-table" class="table table-striped table-responsive table-hover">
+      <thead>
+        <tr>
+          <th>First name</th>
+          <th>Last name</th>
+          <th>Email</th>
+          <th>Phone1</th>
+          <th>Address</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
 
-  <tbody>
-    <% @volunteers.each do |volunteer| %>
-      <tr>
-        <td><%= volunteer.first_name %></td>
-        <td><%= volunteer.last_name %></td>
-        <td><%= volunteer.email %></td>
-        <td><%= volunteer.phone1 %></td>
-        <td><%= volunteer.location.full_street_address if volunteer.location %></td>
-        <td><%= link_to 'Show', volunteer, remote: true %>
-        <%= link_to 'Edit', edit_volunteer_path(volunteer) %>
-        <%= link_to 'Destroy', volunteer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-<br>
-<%= link_to 'New Volunteer', new_volunteer_path %>
-<br>
-<%= link_to 'Download data in CSV format', volunteers_path(format: "csv") %> 
-<br>
-<%= link_to 'Import data in CSV format', new_volunteers_import_path %> 
+      <tbody>
+        <% @volunteers.each do |volunteer| %>
+          <tr>
+            <td><%= volunteer.first_name %></td>
+            <td><%= volunteer.last_name %></td>
+            <td><%= volunteer.email %></td>
+            <td><%= volunteer.phone1 %></td>
+            <td><%= volunteer.location.full_street_address if volunteer.location %></td>
+            <td>
 
-<script>
-</script>
+              <div class="dropdown">
+                <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Actions 
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                  <%= link_to 'Show', volunteer, remote: true, class: "dropdown-item" %>
+                  <%= link_to 'Edit', edit_volunteer_path(volunteer), class: "dropdown-item" %>
+                  <%= link_to 'Destroy', volunteer, method: :delete, data: { confirm: 'Are you sure?' }, class: "dropdown-item" %>
+                </div>
+              </div>
+
+            </td>
+
+
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+    <ul class="nav">
+      <li class="nav-item">
+        <%= link_to 'New Volunteer', new_volunteer_path, class: "nav-link" %>
+      </li>
+      <li class="nav-item">
+        <%= link_to 'Download data in CSV format', volunteers_path(format: "csv"), class: "nav-link" %> 
+      </li>
+      <li class="nav-item">
+        <%= link_to 'Import data in CSV format', new_volunteers_import_path, class: "nav-link" %> 
+      </li>
+    </ul>
+  </div>
+</div>
