--- a/app/views/volunteers_groups/index.html.erb
+++ b/app/views/volunteers_groups/index.html.erb
@@ -1,31 +1,39 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Volunteers Groups</h1>
+<div class="tables-wrapper">
+  <div class="white-panel pn">
+    <div class="white-header">
+      <h1> <i class="fa fa-chevron-right" aria-hidden="true"></i> Listing Volunteers Groups</h1>
+    </div>
 
-<table id="volunteers-group-table" class="table table-striped table-responsive table-hover">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
+    <table id="volunteers-group-table" class="table table-striped table-responsive table-hover">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Description</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
 
-  <tbody>
-    <% @volunteers_groups.each do |volunteers_group| %>
-      <tr>
-        <td><%= volunteers_group.name %></td>
-        <td><%= volunteers_group.description %></td>
-        <td><%= link_to 'Show', volunteers_group %>
-        <%= link_to 'Edit', edit_volunteers_group_path(volunteers_group) %>
-        <%= link_to 'Destroy', volunteers_group, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-<br>
-<%= link_to 'New Volunteers group', new_volunteers_group_path %>
-
-
+      <tbody>
+        <% @volunteers_groups.each do |volunteers_group| %>
+          <tr>
+            <td><%= volunteers_group.name %></td>
+            <td><%= volunteers_group.description %></td>
+            <td><%= link_to 'Show', volunteers_group %>
+            <%= link_to 'Edit', edit_volunteers_group_path(volunteers_group) %>
+            <%= link_to 'Destroy', volunteers_group, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+    <br>
+    <ul class="nav justify-content-end">
+      <li class="nav-item">
+        <%= link_to 'New Volunteers group', new_volunteers_group_path, class: 'nav-link' %>
+      </li>
+    </ul>
+  </div>
+</div>
 
 
